--- a/dina_hub.yml
+++ b/dina_hub.yml
@@ -15,4 +15,6 @@ dependencies:
   - pandas>=1.3.5
   - pip>=21.3.1
   - python>=3.10.2
+  - rise>=5.7.1
+  - seaborn>=0.11.2
   - setuptools>=59.8.0
